--- a/app/css/style.css
+++ b/app/css/style.css
@@ -597,7 +597,7 @@ body {
   list-style: none;
   float: left;
   width: 33.33333%;
-  text-align: center;
+  text-align: left;
   margin: 5px 0px;
 }
 
@@ -736,15 +736,22 @@ width: 280px;
 }
 
 .textoSectionNosotros ul li::before { 
-  content: "\2022";  
+  /*content: "\2022";  
   color: #e77800; 
   display: inline-block; 
   padding-right: 10px;
   font-size: 40px;
   line-height: 25px;
   vertical-align: -9px;
-  width: 15px;
+  width: 15px;*/
+  content: "\2022";
+  color: #e77800;
+  font-weight: bold;
+  display: inline-block; 
+  width: 11px;
+  margin-left: -1em;
 }
+
 
 /*EDC EN PERÚ*/
 .introTextEDC{
